change the name and the css file

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>SwiftMall</title>
-    <link rel="stylesheet" href="style.css">
+    <title>MokeSell</title>
+    <link rel="stylesheet" href="/FED2024Asg2_P04_Team7/style/style.css">
     </head>
     <body class="body-swiftmall">
         <header>
             <div class="logo">
-                <h1>SwiftMall</h1>
+                <h1>MokeSell</h1>
             </div>
         </header>
         <section>
