finish up the page

--- a/index.html
+++ b/index.html
@@ -5,28 +5,30 @@
     <meta name="viewport" content="width=device-width">
     <title>MokeSell</title>
     <link rel="stylesheet" href="/FED2024Asg2_P04_Team7/style/style.css">
-    </head>
-    <body class="body-swiftmall">
-        <header>
-            <div class="logo">
-                <h1>MokeSell</h1>
-            </div>
-        </header>
-        <section>
-            <div class="login">
-                <h2>Get started!</h2>
-                <p>continue with google</p>
-                <p>continue with Email</p>
-                <p>Log in</p>
-            </div>
-        </section>
-        <footer>
-            <div class="footer">
-                <p>Don’t have an account? Sign Up</p>
-                <p>Privacy Policy | Term & Conditions</p>
-            </div>
-        </footer>
-    </body>
-</html>
-            
+  </head>
+  <body class="body-swiftmall">
+    <header>
+        <div class="logo">
+            <h1>MokeSell</h1>
+        </div>
+    </header>
 
+    <section>
+        <div class="login">
+            <h2>Get started!</h2>
+            <div class="google-btn">
+                <span>Continue with Google</span>
+            </div>
+            <!-- Email login button box -->
+            <div class="email-btn">
+                <span>Continue with Email</span>
+            </div>
+            <p>Log in</p>
+           <div class="signup">
+            <p>Don’t have an account? <a href="#">Sign Up</a></p>
+            <p>Privacy Policy | Terms & Conditions</p>
+           </div>
+        </div>
+    </section>  
+  </body>
+</html>
