--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MokeSell</title>
     <link rel="stylesheet" href="/FED2024Asg2_P04_Team7/style/style.css">
   </head>
-  <body class="body-swiftmall">
+  <body class="body-Mokesell">
     <header>
         <div class="logo">
             <h1>MokeSell</h1>
@@ -17,13 +17,17 @@
         <div class="login">
             <h2>Get started!</h2>
             <div class="google-btn">
+                <img width="30" height="30" src="image/google.png" alt="Google Icon">
                 <span>Continue with Google</span>
             </div>
             <!-- Email login button box -->
             <div class="email-btn">
+                <img width="30" height="30" src="image/gmail.png" alt="YouTube Icon">
                 <span>Continue with Email</span>
             </div>
-            <p>Log in</p>
+            <div class="login-btn">
+                <span>Log in</span>
+            </div>
            <div class="signup">
             <p>Don’t have an account? <a href="#">Sign Up</a></p>
             <p>Privacy Policy | Terms & Conditions</p>
