--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>MokeSell</title>
-    <link rel="stylesheet" href="/FED2024Asg2_P04_Team7/style/style.css">
+    <link rel="stylesheet" href="style/style.css" type="text/css">
   </head>
   <body class="body-Mokesell">
     <header>
@@ -22,7 +22,7 @@
             </div>
             <!-- Email login button box -->
             <div class="email-btn">
-                <img width="30" height="30" src="image/gmail.png" alt="YouTube Icon">
+                <img width="30" height="30" src="image/gmail.png" alt="Gmail Icon">
                 <span>Continue with Email</span>
             </div>
             <div class="login-btn">
