code for the contact ys page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="body-Mokesell">
     <header>
-        <div class="logo">
+        <div class="logo-nav">
             <h1>MokeSell</h1>
         </div>
     </header>
