create javascript and make login page

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -22,6 +22,32 @@
         <h2>CONTACT US</h2>
         <p>Get in touch with us now for any inquiries and issues! Sit tight as we get back to you.</p>
       </div>
-      
-  
+    <div class="contactus">
+      <form class="contact-form">
+        <div class="form-row">
+          <label for="fname">First Name</label><br><br>
+          <input type="text" name="firstName" placeholder="First Name" required>
+          <label for="fname">Last Name</label><br><br>
+          <input type="text" name="lastName" placeholder="Last Name" required>
+        </div>
+        <div class="form-row">
+          <label for="email">Email</label><br><br>
+          <input type="email" name="email" placeholder="Email" required>
+          <label for="phone">Phone Number</label><br><br>
+          <input type="tel" name="phone" placeholder="Phone Number" required>
+        </div>
+        <div class="form-row">
+          <label>Select Subject?</label>
+          <div class="radio-options">
+            <label><input type="radio" name="subject" value="seller" required> Seller</label>
+            <label><input type="radio" name="subject" value="buyer" required> Buyer</label>
+            <label><input type="radio" name="subject" value="other" required> Other</label>
+          </div>
+        </div>
+        <label for="message">Message  </label><br><br>
+        <textarea name="message" rows="5" placeholder="Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
   </body>
+</html>
