--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="body-Mokesell">
     <header>
-        <div class="logo-nav">
+        <div class="logo">
             <h1>MokeSell</h1>
         </div>
     </header>
@@ -26,7 +26,7 @@
                 <span>Continue with Email</span>
             </div>
             <div class="login-btn">
-                <span>Log in</span>
+                <a href="html/login.html" class="button">Login</a>
             </div>
            <div class="signup">
             <p>Don’t have an account? <a href="#">Sign Up</a></p>
