change background color and some minor change for html

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
                 <span>Continue with Email</span>
             </div>
             <div class="login-btn">
-                <a href="html/login.html" class="button">Login</a>
+                <a href="html/login.html" class="button">Login and Register</a>
             </div>
-           <div class="signup">
-            <p>Don’t have an account? <a href="#">Sign Up</a></p>
+           <div class="privacy">
             <p>Privacy Policy | Terms & Conditions</p>
            </div>
         </div>
