--- a/html/contactus.html
+++ b/html/contactus.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="../style/style.css" type="text/css">
+    <link rel="stylesheet" href="../style/contact.css" type="text/css">
   </head>
   <body class="bodycon">
     <header>
