put some comment

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <section>
         <div class="login">
             <h2>Get started!</h2>
+            <!-- Email login button box -->
             <div class="google-btn">
                 <img width="30" height="30" src="image/google.png" alt="Google Icon">
                 <span>Continue with Google</span>
