--- a/html/contactus.html
+++ b/html/contactus.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bodycon">
     <header>
-      <nav class="navbar">
+      <nav class="navbar"> <!--navbar-->
         <div class="logo-nav">
             <img width="80px" height="80px" src="../image/mslogo.png" alt="logo Icon">
             <h1>MokeSell</h1>
