--- a/html/login.html
+++ b/html/login.html
@@ -77,6 +77,7 @@
         </div>
       </div>
     </div>
+    <!--script-->
     <script src="../script/script.js" type="module"></script>
   </body>
 </html>
