edit the layouts in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>MokeSell</title>
-    <link rel="stylesheet" href="../style/style.css" type="text/css">
+    <link rel="stylesheet" href="style/style.css" type="text/css">
   </head>
   <body class="body-Mokesell">
     <header>
@@ -20,14 +20,6 @@
             <div class="google-btn">
                 <img width="30" height="30" src="image/google.png" alt="Google Icon">
                 <span>Continue with Google</span>
-            </div>
-            
-            <!-- Extra content retained as per original HTML -->
-            <div class="login">
-                <h2>Get started!</h2>
-                <p>continue with google</p>
-                <p>continue with Email</p>
-                <p>Log in</p>
             </div>
             
             <!-- Login button -->
