make some changes

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
             <h1>MokeSell</h1>
         </div>
     </header>
-
     <section>
         <div class="login">
             <h2>Get started!</h2>
-            <!-- Email login button box -->
             <div class="google-btn">
                 <img width="30" height="30" src="image/google.png" alt="Google Icon">
                 <span>Continue with Google</span>
             </div>
-            
-            <!-- Login button -->
+            <!-- Email login button box -->
+            <div class="email-btn">
+                <img width="30" height="30" src="image/gmail.png" alt="Gmail Icon">
+                <span>Continue with Email</span>
+            </div>
             <div class="login-btn">
                 <a href="html/login.html" class="button">Login and Register</a>
             </div>
