make the container for conatact us page

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -36,7 +36,7 @@
           <label for="phone">Phone Number</label><br><br>
           <input type="tel" name="phone" placeholder="Phone Number" required>
         </div>
-        <div class="form-row">
+        <div class="select-form ">
           <label>Select Subject?</label>
           <div class="radio-options">
             <label><input type="radio" name="subject" value="seller" required> Seller</label>
