--- a/html/spin_wheel.html
+++ b/html/spin_wheel.html
@@ -9,14 +9,14 @@
       rel="stylesheet"
     />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/style/spin_wheel.css" />
+    <link rel="stylesheet" href="../style/spin_wheel.css" />
   </head>
   <body>
     <div class="wrapper">
       <div class="container">
         <canvas id="wheel"></canvas>
         <button id="spin-btn">Spin</button>
-        <img src="/image/arrow.png" alt="spinner-arrow" />
+        <img src="../image/arrow.png" alt="spinner-arrow" />
       </div>
       <div id="final-value">
         <p>Click The Button To Spin Once</p>
@@ -27,6 +27,6 @@
     <!-- Chart JS Plugin for displaying text over chart -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
     <!-- Script -->
-    <script src="/script/spin_wheel.js"></script>
+    <script src="../script/spin_wheel.js"></script>
   </body>
 </html>
