--- a/html/spin_wheel.html
+++ b/html/spin_wheel.html
@@ -22,11 +22,34 @@
         <p>Click The Button To Spin Once</p>
       </div>
     </div>
+    
+    <!-- Firebase App (modular) -->
+    <script type="module">
+      // Import Firebase SDKs
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+      import { getFirestore } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
+      
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyCeZEByafoJgLvZDxc0DCuUIYL2_37XT2c",
+        authDomain: "fed-assignment-2-54ec3.firebaseapp.com",
+        projectId: "fed-assignment-2-54ec3",
+        storageBucket: "fed-assignment-2-54ec3.appspot.com",
+        messagingSenderId: "398158834633",
+        appId: "1:398158834633:web:c025708b57da0f4e109618",
+        measurementId: "G-HC6YLQLFK5",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      export { db }; // Export Firestore instance for use in other scripts
+    </script>
+
     <!-- Chart JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-    <!-- Chart JS Plugin for displaying text over chart -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
-    <!-- Script -->
-    <script src="../script/spin_wheel.js"></script>
+    <!-- Custom Script -->
+    <script src="../script/spin_wheel.js" type="module"></script>
   </body>
 </html>
