--- a/html/contactus.html
+++ b/html/contactus.html
@@ -13,7 +13,7 @@
             <img width="80px" height="80px" src="../image/mslogo.png" alt="logo Icon">
             <h1>MokeSell</h1>
         </div>
-        <a href="html/Home.html" class="button">Home</a>
+        <a href="home.html" class="button">Home</a>
         <a href="html/contactus.html" class="button">Contact Us</a>
         <a href="html/followus.html" class="button">Follow Us</a>
       </nav>
