--- a/html/contactus.html
+++ b/html/contactus.html
@@ -48,6 +48,34 @@
         <textarea name="message" rows="5" placeholder="Message" required></textarea>
         <button type="submit">Send Message</button>
       </form>
+      <div id="success-message" style="display: none; color: rgb(0, 145, 24); text-align: center; margin-top: 20px;">
+        Feedback successfully captured!
+      </div>
     </div>
+
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyCeZEByafoJgLvZDxc0DCuUIYL2_37XT2c",
+        authDomain: "fed-assignment-2-54ec3.firebaseapp.com",
+        projectId: "fed-assignment-2-54ec3",
+        storageBucket: "fed-assignment-2-54ec3.firebasestorage.app",
+        messagingSenderId: "398158834633",
+        appId: "1:398158834633:web:c025708b57da0f4e109618",
+        measurementId: "G-HC6YLQLFK5"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
+    <script src="../script/contact.js" type="module"></script>
   </body>
 </html>
