link from login to home page and add spin the wheel button at the nav bar

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -8,15 +8,18 @@
   </head>
   <body class="bodycon">
     <header>
-      <nav class="navbar"> <!--navbar-->
+      <nav class="navbar">
         <div class="logo-nav">
-            <img width="80px" height="80px" src="../image/mslogo.png" alt="logo Icon">
+            <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
             <h1>MokeSell</h1>
         </div>
-        <a href="home.html" class="button">Home</a>
-        <a href="html/contactus.html" class="button">Contact Us</a>
-        <a href="html/followus.html" class="button">Follow Us</a>
-      </nav>
+        <div class="nav-links">
+            <a href="home.html" class="btn">Home</a>
+            <a href="spin_wheel.html" class="btn">Spin The Wheel</a>
+            <a href="contactus.html" class="btn">Contact</a>
+            <a href="follow.html" class="btn">Follow Us</a>
+        </div>
+    </nav>
     </header>
     <div class="slogan-contact">
         <h2>CONTACT US</h2>
