--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MokeSell - Modern Marketplace</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/style/home.css">
+    <link rel="stylesheet" href="../style/home.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -16,7 +16,8 @@
         </div>
         <div class="nav-links">
             <a href="home.html" class="button">Home</a>
-            <a href="contact.html" class="button">Contact</a>
+            <a href="spin_wheel.html" class="button">Spin The Wheel</a>
+            <a href="contactus.html" class="button">Contact</a>
             <a href="follow.html" class="button">Follow Us</a>
         </div>
     </nav>
