--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>User Authentication</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../style/login.css" type="text/css">
   </head>
   <body>
@@ -13,6 +13,11 @@
         <div class="alert alert-danger" id="error-message" style="display: none;" role="alert">
           Invalid username or password!
         </div>
+        <div class = "logo-container">
+          <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
+          <h1>MokeSell</h1>
+        </div>
+
         <div class="login-form">
           <h2>Login</h2>
           <form id="login-form">
