--- a/html/spin_wheel.html
+++ b/html/spin_wheel.html
@@ -22,6 +22,7 @@
         <p>Click The Button To Spin Once</p>
       </div>
     </div>
+    <a href="home.html" class="return-button">Return to HomePage</a>
     
     <!-- Firebase App (modular) -->
     <script type="module">
