--- a/html/contactus.html
+++ b/html/contactus.html
@@ -1,59 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="../style/contact.css" type="text/css">
-  </head>
-  <body class="bodycon">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - MokeSell</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="../style/contact.css">
+</head>
+<body class="bodycon">
+    <!-- Navbar -->
     <header>
-      <nav class="navbar">
-        <div class="logo-nav">
-            <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
-            <h1>MokeSell</h1>
-        </div>
-        <div class="nav-links">
-            <a href="home.html" class="btn">Home</a>
-            <a href="spin_wheel.html" class="btn">Spin The Wheel</a>
-            <a href="contactus.html" class="btn">Contact</a>
-            <a href="follow.html" class="btn">Follow Us</a>
-        </div>
-    </nav>
+        <nav class="navbar">
+            <div class="logo-nav">
+                <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
+                <h1>MokeSell</h1>
+            </div>
+            <div class="nav-links">
+                <a href="home.html" class="btn">Home</a>
+                <a href="spin_wheel.html" class="btn">Spin The Wheel</a>
+                <a href="contactus.html" class="btn">Contact</a>
+                <a href="follow.html" class="btn">Follow Us</a>
+            </div>
+        </nav>
     </header>
+
+    <!-- Contact Section -->
     <div class="slogan-contact">
         <h2>CONTACT US</h2>
         <p>Get in touch with us now for any inquiries and issues! Sit tight as we get back to you.</p>
-      </div>
+    </div>
+
     <div class="contactus">
-      <form class="contact-form">
-        <div class="form-row">
-          <label for="fname">First Name</label><br><br>
-          <input type="text" name="firstName" placeholder="First Name" required>
-          <label for="fname">Last Name</label><br><br>
-          <input type="text" name="lastName" placeholder="Last Name" required>
+        <form class="contact-form">
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="firstName" placeholder="First Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastName" placeholder="Last Name" required>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="phone" placeholder="Phone Number" required>
+                </div>
+            </div>
+            <div class="select-form">
+                <label>Select Subject?</label>
+                <div class="radio-options">
+                    <label><input type="radio" name="subject" value="seller" required> Seller</label>
+                    <label><input type="radio" name="subject" value="buyer" required> Buyer</label>
+                    <label><input type="radio" name="subject" value="other" required> Other</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" placeholder="Message" required></textarea>
+            </div>
+            <button type="submit" class="submit-btn">Send Message</button>
+        </form>
+        <div id="success-message" style="display: none; color: rgb(0, 145, 24); text-align: center; margin-top: 20px;">
+            Feedback successfully captured!
         </div>
-        <div class="form-row">
-          <label for="email">Email</label><br><br>
-          <input type="email" name="email" placeholder="Email" required>
-          <label for="phone">Phone Number</label><br><br>
-          <input type="tel" name="phone" placeholder="Phone Number" required>
-        </div>
-        <div class="select-form ">
-          <label>Select Subject?</label>
-          <div class="radio-options">
-            <label><input type="radio" name="subject" value="seller" required> Seller</label>
-            <label><input type="radio" name="subject" value="buyer" required> Buyer</label>
-            <label><input type="radio" name="subject" value="other" required> Other</label>
-          </div>
-        </div>
-        <label for="message">Message  </label><br><br>
-        <textarea name="message" rows="5" placeholder="Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-      <div id="success-message" style="display: none; color: rgb(0, 145, 24); text-align: center; margin-top: 20px;">
-        Feedback successfully captured!
-      </div>
     </div>
 
     <script type="module">
