added html and styles for the follow us page and fixed some navigation issues.

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -19,7 +19,7 @@
                 <a href="home.html" class="btn">Home</a>
                 <a href="spin_wheel.html" class="btn">Spin The Wheel</a>
                 <a href="contactus.html" class="btn">Contact</a>
-                <a href="follow.html" class="btn">Follow Us</a>
+                <a href="followus.html" class="btn">Follow Us</a>
             </div>
         </nav>
     </header>
