--- a/html/home.html
+++ b/html/home.html
@@ -18,7 +18,7 @@
             <a href="home.html" class="button">Home</a>
             <a href="spin_wheel.html" class="button">Spin The Wheel</a>
             <a href="contactus.html" class="button">Contact</a>
-            <a href="follow.html" class="button">Follow Us</a>
+            <a href="followus.html" class="button">Follow Us</a>
         </div>
     </nav>
 
