--- a/html/home.html
+++ b/html/home.html
@@ -22,6 +22,14 @@
         </div>
     </nav>
 
+    <!-- Search Bar -->
+    <div class="search-container">
+        <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Search products by name or description...">
+        <i class="fas fa-search search-icon"></i>
+        </div>
+    </div>
+
     <!-- Product Grid -->
     <div class="small-container">
         <div class="row-2">
@@ -117,5 +125,6 @@
             </div>
         </div>
     </footer>
+<script src="../script/home.js"></script>
 </body>
 </html>
