add one more product for testing the sort by feature

--- a/html/home.html
+++ b/html/home.html
@@ -90,9 +90,23 @@
                 </div>
                 <p class="product-price">$1899.99</p>
                 <button class="btn">Add to Cart</button>
-            </div>
+            </div>            
         </div>
-            <!-- Add more product cards as needed -->
+          <div class="product-card">
+            <img src="https://i.ibb.co/b7ZVzYr/product-2.jpg" alt="Product" class="product-image">
+            <div class="product-info">
+                <h4 class="product-title">Apple skin peeler</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p class="product-price">$4.99</p>
+                <button class="btn">Add to Cart</button>
+            </div>
+
         </div>
         
     </div>
