added the chat button to open chats

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -20,6 +20,7 @@
                 <a href="spin_wheel.html" class="btn">Spin The Wheel</a>
                 <a href="contactus.html" class="btn">Contact</a>
                 <a href="followus.html" class="btn">Follow Us</a>
+                <a href="chat.html" class="btn">Chats</a>
             </div>
         </nav>
     </header>
