--- a/html/home.html
+++ b/html/home.html
@@ -19,6 +19,7 @@
             <a href="spin_wheel.html" class="button">Spin The Wheel</a>
             <a href="contactus.html" class="button">Contact</a>
             <a href="followus.html" class="button">Follow Us</a>
+            <a href="chat.html" class="button">Chats</a>
         </div>
     </nav>
 
