--- a/html/chat.html
+++ b/html/chat.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MokeSell Chats</title>
+    <title>Chats</title>
     <link rel="stylesheet" href="../style/chat.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Chat Interface -->
     <div class="chat-container">
         <div class="sidebar">
             <div class="search-bar">
-                <input type="text" class="search-input" id="userSearch" placeholder="Search users">
+                <input type="text" id="userSearch" placeholder="Search users...">
             </div>
             <div class="chat-list" id="chatList"></div>
         </div>
@@ -20,11 +19,11 @@
         <div class="main-chat">
             <div class="messages" id="messagesContainer"></div>
             <div class="input-area">
-                <input type="file" class="file-input" id="fileInput" accept="image/*">
+                <input type="file" id="fileInput" accept="image/*">
                 <label for="fileInput" class="file-input-label">
                     <i class="fas fa-image"></i>
                 </label>
-                <input type="text" class="message-input" id="messageInput" placeholder="Type a message...">
+                <input type="text" id="messageInput" placeholder="Type a message...">
                 <button id="sendBtn"><i class="fas fa-paper-plane"></i></button>
             </div>
         </div>
@@ -33,6 +32,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="../script/chat.js"></script>
 </body>
 </html>
