--- a/html/login.html
+++ b/html/login.html
@@ -13,7 +13,7 @@
         <div class="alert alert-danger" id="error-message" style="display: none;" role="alert">
           Invalid username or password!
         </div>
-        <div class = "logo-container">
+        <div class="logo-container">
           <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
           <h1>MokeSell</h1>
         </div>
@@ -22,8 +22,12 @@
           <h2>Login</h2>
           <form id="login-form">
             <div class="mb-3">
-              <label for="username" class="form-label">Email</label>
-              <input type="email" class="form-control" id="username" placeholder="Enter your email" required>
+              <label for="login-username" class="form-label">Username</label>
+              <input type="text" class="form-control" id="login-username" placeholder="Enter your username">
+            </div>
+            <div class="mb-3">
+              <label for="login-email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="login-email" placeholder="Enter your email" required>
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
@@ -31,7 +35,6 @@
             </div>
             <button type="submit" class="btn btn-primary btn-custom">Login</button>
             <div class="mt-3 text-center">
-              <a href="#" id="forgot-password-link">Forgot password?</a> |
               <a href="#" id="register-link">Register</a>
             </div>
           </form>
@@ -47,6 +50,10 @@
           <h2>Register</h2>
           <form id="signup-form">
             <div class="mb-3">
+              <label for="signup-username" class="form-label">Username</label>
+              <input type="text" class="form-control" id="signup-username" placeholder="Enter your username" required>
+            </div>
+            <div class="mb-3">
               <label for="signup-email" class="form-label">Email</label>
               <input type="email" class="form-control" id="signup-email" placeholder="Enter your email" required>
             </div>
@@ -59,26 +66,6 @@
               <a href="#" id="back-to-login-link">Back to Login</a>
             </div>
           </form>
-        </div>
-      </div>
-
-      <!-- Forgot Password Form -->
-      <div class="forget-container" id="forget-container" style="display: none;">
-        <div class="alert alert-danger" id="forget-error-message" style="display: none;" role="alert">
-          Please enter a valid email address.
-        </div>
-        <div class="forget-form">
-          <h2>Reset Password</h2>
-          <form id="forget-form">
-            <div class="mb-3">
-              <label for="forget-email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="forget-email" placeholder="Enter your email" required>
-            </div>
-            <button type="submit" class="btn btn-primary btn-custom">Reset Password</button>
-          </form>
-          <div class="mt-3 text-center">
-            <a href="#" id="back-to-login-from-forget-link">Back to Login</a>
-          </div>
         </div>
       </div>
     </div>
