edit the bottom bar for home page, button for create list and the categoty

--- a/html/home.html
+++ b/html/home.html
@@ -31,6 +31,20 @@
         </div>
     </div>
 
+    <div class="rewards-container">
+        <div class="reward-box">
+            <h3>Points:</h3>
+            <p id="user-points">0</p>
+        </div>
+        <div class="reward-box">
+            <h3>Voucher:</h3>
+            <p id="user-vouchers">0</p>
+        </div>
+    </div>
+    
+    <!-- Create New Listing -->
+    <button class="create-listing-btn">Create New Listing</button>
+
     <!-- Product Grid -->
     <div class="small-container">
         <div class="row-2">
@@ -41,6 +55,28 @@
                 <option>Price: High to Low</option>
                 <option>Most Popular</option>
             </select>
+        </div>
+        <!-- Category Selection -->
+        <div class="categories">
+            <h2>What would you like to find?</h2>
+            <div class="category-grid">
+                <div class="category-item">
+                    <img src="https://via.placeholder.com/50" alt="Women's Fashion">
+                    <p>Women's Fashion</p>
+                </div>
+                <div class="category-item">
+                    <img src="https://via.placeholder.com/50" alt="Men's Fashion">
+                    <p>Men's Fashion</p>
+                </div>
+                <div class="category-item">
+                    <img src="https://via.placeholder.com/50" alt="Mobile Phones & Gadgets">
+                    <p>Mobile Phones & Gadgets</p>
+                </div>
+                <div class="category-item">
+                    <img src="https://via.placeholder.com/50" alt="Luxury">
+                    <p>Luxury</p>
+                </div>
+            </div>
         </div>
 
         <div class="product-grid">
@@ -107,39 +143,20 @@
                 <p class="product-price">$4.99</p>
                 <button class="btn">Add to Cart</button>
             </div>
-
+          </div>
         </div>
-        
     </div>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-grid">
-            <div class="footer-col">
-                <h3>Get Our App</h3>
-                <div class="app-logo">
-                    <img src="https://i.ibb.co/KbPTYYQ/play-store.png" alt="Play Store">
-                    <img src="https://i.ibb.co/hVM4X2p/app-store.png" alt="App Store">
+        <!-- Bottom Bar Footer -->
+        <footer class="bottom-bar">
+            <div class="bottom-bar-content">
+                <h2>Unlock the Power of SwiftMall</h2>
+                <p>Download the App Now!</p>
+                <div class="app-buttons">
+                    <button class="app-store">App Store</button>
+                    <button class="google-play">Google Play</button>
                 </div>
             </div>
-            <div class="footer-col">
-                <h3>Company</h3>
-                <ul>
-                    <li>About Us</li>
-                    <li>Careers</li>
-                    <li>Sustainability</li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h3>Support</h3>
-                <ul>
-                    <li>Contact</li>
-                    <li>Shipping</li>
-                    <li>Returns</li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-<script src="../script/home.js"></script>
-</body>
+        </footer>
+        <script src="../script/home.js"></script>
+    </body>
 </html>
