changed name at footer

--- a/html/home.html
+++ b/html/home.html
@@ -149,7 +149,7 @@
         <!-- Bottom Bar Footer -->
         <footer class="bottom-bar">
             <div class="bottom-bar-content">
-                <h2>Unlock the Power of SwiftMall</h2>
+                <h2>Unlock the Power of MokeSell</h2>
                 <p>Download the App Now!</p>
                 <div class="app-buttons">
                     <button class="app-store">App Store</button>
