added nav bar for chat

--- a/html/chat.html
+++ b/html/chat.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+
+    <nav class="navbar">
+        <div class="logo-nav">
+            <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
+            <h1>MokeSell</h1>
+        </div>
+        <div class="nav-links">
+            <a href="home.html" class="button">Home</a>
+            <a href="spin_wheel.html" class="button">Spin The Wheel</a>
+            <a href="contactus.html" class="button">Contact</a>
+            <a href="followus.html" class="button">Follow Us</a>
+            <a href="chat.html" class="button">Chats</a>
+        </div>
+    </nav>
+
     <div class="chat-container">
         <div class="sidebar">
             <div class="search-bar">
