the chat is now able to allow users to add images. might update a little more later on

--- a/html/home.html
+++ b/html/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/home.css">
 </head>
 <body>
+    <div id="imageOverlay" class="image-overlay"></div>
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-nav">
