--- a/html/chat.html
+++ b/html/chat.html
@@ -6,9 +6,11 @@
     <title>Chats</title>
     <link rel="stylesheet" href="../style/chat.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://unpkg.com/cloudinary-core@latest/cloudinary-core-shrinkwrap.min.js"></script>
+
 </head>
 <body>
-
+    <div id="imageOverlay" class="image-overlay"></div>
     <nav class="navbar">
         <div class="logo-nav">
             <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
