--- a/html/create.html
+++ b/html/create.html
@@ -29,7 +29,7 @@
             <input type="text" id="productName" name="productName" required>
             
             <label for="productPrice">Price ($):</label>
-            <input type="number" id="productPrice" name="productPrice" required>
+            <input type="number" id="productPrice" name="productPrice" step="0.01" required>
             
             <label for="productCategory">Category:</label>
             <select id="productCategory" name="productCategory">
