edit the buttom bar for home page and add the image for the google play and app store lastly edit the create ,html and javascreipt

--- a/html/home.html
+++ b/html/home.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-nav">
-            <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell Logo">
+            <img width="80" height="80" src="../image/mslogo.png" alt="MokeSell_Logo">
             <h1>MokeSell</h1>
         </div>
         <div class="nav-links">
@@ -150,12 +150,23 @@
     </div>
         <!-- Bottom Bar Footer -->
         <footer class="bottom-bar">
-            <div class="bottom-bar-content">
-                <h2>Unlock the Power of MokeSell</h2>
-                <p>Download the App Now!</p>
-                <div class="app-buttons">
-                    <button class="app-store">App Store</button>
-                    <button class="google-play">Google Play</button>
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="../image/mokesell-logo.jpeg" alt="MokeSell-bottom-Logo">
+                </div>
+                <div class="bottom-bar-text">
+                    <h2>Unlock the Power of MokeSell</h2>
+                    <p>Download the App Now!</p>
+                    <div class="app-buttons">
+                        <a href="https://www.apple.com/app-store/" target="_blank" class="app-store">
+                            <img width="30" height="30" src="../image/applestore.png" alt="App Store">
+                            <span>Download on App Store</span>
+                        </a>
+                        <a href="https://play.google.com/store" target="_blank" class="google-play">
+                            <img width="30" height="30" src="../image/googleplay.png" alt="Google Play">
+                            <span>Get it on Google Play</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </footer>
