--- a/html/create.html
+++ b/html/create.html
@@ -59,13 +59,6 @@
             </div>
         </div>
     </footer>
-    
-    <script>
-        document.getElementById('listingForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            alert('Listing Created Successfully!');
-            this.reset();
-        });
-    </script>
+    <script src="../script/create.js" type="module"></script>
 </body>
 </html>
