--- a/html/create.html
+++ b/html/create.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -50,12 +49,23 @@
     </div>
     
     <footer class="bottom-bar">
-        <div class="bottom-bar-content">
-            <h2>Unlock the Power of MokeSell</h2>
-            <p>Download the App Now!</p>
-            <div class="app-buttons">
-                <button class="app-store">App Store</button>
-                <button class="google-play">Google Play</button>
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="../image/mokesell-logo.jpeg" alt="MokeSell-bottom-Logo">
+            </div>
+            <div class="bottom-bar-text">
+                <h2>Unlock the Power of MokeSell</h2>
+                <p>Download the App Now!</p>
+                <div class="app-buttons">
+                    <a href="https://www.apple.com/app-store/" target="_blank" class="app-store">
+                        <img width="30" height="30" src="../image/applestore.png" alt="App Store">
+                        <span>Download on App Store</span>
+                    </a>
+                    <a href="https://play.google.com/store" target="_blank" class="google-play">
+                        <img width="30" height="30" src="../image/googleplay.png" alt="Google Play">
+                        <span>Get it on Google Play</span>
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
