added 3 files and rough codes for the product page and removed payment page.

--- a/html/home.html
+++ b/html/home.html
@@ -81,6 +81,7 @@
             </div>
         </div>
 
+        <a href="product.html" class="product-link">
         <div class="product-grid">
             <!-- Product Card 1 -->
             <div class="product-card">
@@ -148,6 +149,7 @@
           </div>
         </div>
     </div>
+    </a>
         <!-- Bottom Bar Footer -->
         <footer class="bottom-bar">
             <div class="footer-content">
